parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Programa Declaracoes
Rule 2     Programa -> Declaracoes
Rule 3     Declaracoes -> Declaracao_Variavel
Rule 4     Declaracoes -> Funcao
Rule 5     Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
Rule 6     Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM
Rule 7     Declaracao_Variavel -> Tipo DOISPONTOS Variaveis
Rule 8     Variaveis -> Variaveis VIRGULA IDENTIFICADOR
Rule 9     Variaveis -> IDENTIFICADOR
Rule 10    Conjunto_Parametros -> Tipo DOISPONTOS IDENTIFICADOR VIRGULA Conjunto_Parametros
Rule 11    Conjunto_Parametros -> Tipo DOISPONTOS IDENTIFICADOR
Rule 12    Conjunto_Parametros -> empty
Rule 13    Tipo -> INTEIRO
Rule 14    Tipo -> FLUTUANTE
Rule 15    Conjunto_Declaracoes -> Conjunto_Declaracoes Declaracao
Rule 16    Conjunto_Declaracoes -> Declaracao
Rule 17    Declaracao -> Declaracao_Se
Rule 18    Declaracao -> Declaracao_Repita
Rule 19    Declaracao -> Declaracao_Atribuicao
Rule 20    Declaracao -> Declaracao_Leia
Rule 21    Declaracao -> Declaracao_Escreva
Rule 22    Declaracao -> Declaracao_Variavel
Rule 23    Declaracao -> Declaracao_Retorno
Rule 24    Declaracao -> Chama_Funcao
Rule 25    Declaracao_Se -> SE Expressao_Comparacional ENTAO Conjunto_Declaracoes FIM
Rule 26    Declaracao_Se -> SE Expressao_Comparacional ENTAO Conjunto_Declaracoes SENAO Conjunto_Declaracoes FIM
Rule 27    Declaracao_Repita -> REPITA Conjunto_Declaracoes ATE Expressao_Comparacional
Rule 28    Declaracao_Atribuicao -> IDENTIFICADOR ATRIBUICAO Conjunto_Expressao
Rule 29    Declaracao_Leia -> LEIA ABREPARENTES IDENTIFICADOR FECHAPARENTES
Rule 30    Declaracao_Escreva -> ESCREVA ABREPARENTES Conjunto_Expressao FECHAPARENTES
Rule 31    Declaracao_Retorno -> RETORNA ABREPARENTES Conjunto_Expressao FECHAPARENTES
Rule 32    Conjunto_Expressao -> Expressao_ID
Rule 33    Conjunto_Expressao -> Expressao_Aritmetica
Rule 34    Conjunto_Expressao -> Expressao_Comparacional
Rule 35    Conjunto_Expressao -> Expressao_Parenteses
Rule 36    Conjunto_Expressao -> Expressao_Numero
Rule 37    Conjunto_Expressao -> Chama_Funcao
Rule 38    Conjunto_Expressao -> Expressao_Unaria
Rule 39    Parametros -> Parametros VIRGULA Conjunto_Expressao
Rule 40    Parametros -> Conjunto_Expressao
Rule 41    Chama_Funcao -> IDENTIFICADOR ABREPARENTES Parametros FECHAPARENTES
Rule 42    Chama_Funcao -> IDENTIFICADOR ABREPARENTES FECHAPARENTES
Rule 43    Expressao_ID -> Expressao_ID VIRGULA IDENTIFICADOR
Rule 44    Expressao_ID -> IDENTIFICADOR
Rule 45    Expressao_Aritmetica -> Conjunto_Expressao SOMA Conjunto_Expressao
Rule 46    Expressao_Aritmetica -> Conjunto_Expressao SUBTRACAO Conjunto_Expressao
Rule 47    Expressao_Aritmetica -> Conjunto_Expressao MULTIPLICACAO Conjunto_Expressao
Rule 48    Expressao_Aritmetica -> Conjunto_Expressao DIVISAO Conjunto_Expressao
Rule 49    Expressao_Unaria -> SOMA Conjunto_Expressao
Rule 50    Expressao_Unaria -> SUBTRACAO Conjunto_Expressao
Rule 51    Expressao_Comparacional -> Conjunto_Expressao MAIOR Conjunto_Expressao
Rule 52    Expressao_Comparacional -> Conjunto_Expressao MENOR Conjunto_Expressao
Rule 53    Expressao_Comparacional -> Conjunto_Expressao MAIORIGUAL Conjunto_Expressao
Rule 54    Expressao_Comparacional -> Conjunto_Expressao MENORIGUAL Conjunto_Expressao
Rule 55    Expressao_Comparacional -> Conjunto_Expressao IGUALDADE Conjunto_Expressao
Rule 56    Expressao_Parenteses -> ABREPARENTES Conjunto_Expressao FECHAPARENTES
Rule 57    Expressao_Numero -> NUMERO
Rule 58    empty -> <empty>

Terminals, with rules where they appear

ABREPARENTES         : 5 6 29 30 31 41 42 56
ATE                  : 27
ATRIBUICAO           : 28
DIVISAO              : 48
DOISPONTOS           : 7 10 11
ENTAO                : 25 26
ESCREVA              : 30
FECHAPARENTES        : 5 6 29 30 31 41 42 56
FIM                  : 5 6 25 26
FLUTUANTE            : 14
IDENTIFICADOR        : 5 6 8 9 10 11 28 29 41 42 43 44
IGUALDADE            : 55
INTEIRO              : 13
LEIA                 : 29
MAIOR                : 51
MAIORIGUAL           : 53
MENOR                : 52
MENORIGUAL           : 54
MULTIPLICACAO        : 47
NUMERO               : 57
REPITA               : 27
RETORNA              : 31
SE                   : 25 26
SENAO                : 26
SOMA                 : 45 49
SUBTRACAO            : 46 50
VIRGULA              : 8 10 39 43
error                : 

Nonterminals, with rules where they appear

Chama_Funcao         : 24 37
Conjunto_Declaracoes : 5 15 25 26 26 27
Conjunto_Expressao   : 28 30 31 39 40 45 45 46 46 47 47 48 48 49 50 51 51 52 52 53 53 54 54 55 55 56
Conjunto_Parametros  : 5 6 10
Declaracao           : 15 16
Declaracao_Atribuicao : 19
Declaracao_Escreva   : 21
Declaracao_Leia      : 20
Declaracao_Repita    : 18
Declaracao_Retorno   : 23
Declaracao_Se        : 17
Declaracao_Variavel  : 3 22
Declaracoes          : 1 2
Expressao_Aritmetica : 33
Expressao_Comparacional : 25 26 27 34
Expressao_ID         : 32 43
Expressao_Numero     : 36
Expressao_Parenteses : 35
Expressao_Unaria     : 38
Funcao               : 4
Parametros           : 39 41
Programa             : 1 0
Tipo                 : 5 6 7 10 11
Variaveis            : 7 8
empty                : 12

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Programa Declaracoes
    (2) Programa -> . Declaracoes
    (3) Declaracoes -> . Declaracao_Variavel
    (4) Declaracoes -> . Funcao
    (7) Declaracao_Variavel -> . Tipo DOISPONTOS Variaveis
    (5) Funcao -> . Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> . Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM
    (13) Tipo -> . INTEIRO
    (14) Tipo -> . FLUTUANTE

    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5

    Declaracao_Variavel            shift and go to state 3
    Tipo                           shift and go to state 4
    Declaracoes                    shift and go to state 1
    Funcao                         shift and go to state 6
    Programa                       shift and go to state 2

state 1

    (2) Programa -> Declaracoes .

    INTEIRO         reduce using rule 2 (Programa -> Declaracoes .)
    FLUTUANTE       reduce using rule 2 (Programa -> Declaracoes .)
    $end            reduce using rule 2 (Programa -> Declaracoes .)


state 2

    (0) S' -> Programa .
    (1) Programa -> Programa . Declaracoes
    (3) Declaracoes -> . Declaracao_Variavel
    (4) Declaracoes -> . Funcao
    (7) Declaracao_Variavel -> . Tipo DOISPONTOS Variaveis
    (5) Funcao -> . Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> . Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM
    (13) Tipo -> . INTEIRO
    (14) Tipo -> . FLUTUANTE

    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5

    Declaracao_Variavel            shift and go to state 3
    Tipo                           shift and go to state 4
    Declaracoes                    shift and go to state 8
    Funcao                         shift and go to state 6

state 3

    (3) Declaracoes -> Declaracao_Variavel .

    INTEIRO         reduce using rule 3 (Declaracoes -> Declaracao_Variavel .)
    FLUTUANTE       reduce using rule 3 (Declaracoes -> Declaracao_Variavel .)
    $end            reduce using rule 3 (Declaracoes -> Declaracao_Variavel .)


state 4

    (7) Declaracao_Variavel -> Tipo . DOISPONTOS Variaveis
    (5) Funcao -> Tipo . IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> Tipo . IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM

    DOISPONTOS      shift and go to state 9
    IDENTIFICADOR   shift and go to state 10


state 5

    (14) Tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 14 (Tipo -> FLUTUANTE .)
    IDENTIFICADOR   reduce using rule 14 (Tipo -> FLUTUANTE .)


state 6

    (4) Declaracoes -> Funcao .

    INTEIRO         reduce using rule 4 (Declaracoes -> Funcao .)
    FLUTUANTE       reduce using rule 4 (Declaracoes -> Funcao .)
    $end            reduce using rule 4 (Declaracoes -> Funcao .)


state 7

    (13) Tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 13 (Tipo -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 13 (Tipo -> INTEIRO .)


state 8

    (1) Programa -> Programa Declaracoes .

    INTEIRO         reduce using rule 1 (Programa -> Programa Declaracoes .)
    FLUTUANTE       reduce using rule 1 (Programa -> Programa Declaracoes .)
    $end            reduce using rule 1 (Programa -> Programa Declaracoes .)


state 9

    (7) Declaracao_Variavel -> Tipo DOISPONTOS . Variaveis
    (8) Variaveis -> . Variaveis VIRGULA IDENTIFICADOR
    (9) Variaveis -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    Variaveis                      shift and go to state 12

state 10

    (5) Funcao -> Tipo IDENTIFICADOR . ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> Tipo IDENTIFICADOR . ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM

    ABREPARENTES    shift and go to state 13


state 11

    (9) Variaveis -> IDENTIFICADOR .

    VIRGULA         reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    INTEIRO         reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    FLUTUANTE       reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    $end            reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    FIM             reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    SE              reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    REPITA          reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    LEIA            reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    ESCREVA         reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    RETORNA         reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    ATE             reduce using rule 9 (Variaveis -> IDENTIFICADOR .)
    SENAO           reduce using rule 9 (Variaveis -> IDENTIFICADOR .)


state 12

    (7) Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .
    (8) Variaveis -> Variaveis . VIRGULA IDENTIFICADOR

    FIM             reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    SE              reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    REPITA          reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    IDENTIFICADOR   reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    LEIA            reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    ESCREVA         reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    RETORNA         reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    INTEIRO         reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    FLUTUANTE       reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    ATE             reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    $end            reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    SENAO           reduce using rule 7 (Declaracao_Variavel -> Tipo DOISPONTOS Variaveis .)
    VIRGULA         shift and go to state 14


state 13

    (5) Funcao -> Tipo IDENTIFICADOR ABREPARENTES . Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> Tipo IDENTIFICADOR ABREPARENTES . Conjunto_Parametros FECHAPARENTES FIM
    (10) Conjunto_Parametros -> . Tipo DOISPONTOS IDENTIFICADOR VIRGULA Conjunto_Parametros
    (11) Conjunto_Parametros -> . Tipo DOISPONTOS IDENTIFICADOR
    (12) Conjunto_Parametros -> . empty
    (13) Tipo -> . INTEIRO
    (14) Tipo -> . FLUTUANTE
    (58) empty -> .

    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5
    FECHAPARENTES   reduce using rule 58 (empty -> .)

    Tipo                           shift and go to state 16
    empty                          shift and go to state 17
    Conjunto_Parametros            shift and go to state 15

state 14

    (8) Variaveis -> Variaveis VIRGULA . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 18


state 15

    (5) Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros . FECHAPARENTES Conjunto_Declaracoes FIM
    (6) Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros . FECHAPARENTES FIM

    FECHAPARENTES   shift and go to state 19


state 16

    (10) Conjunto_Parametros -> Tipo . DOISPONTOS IDENTIFICADOR VIRGULA Conjunto_Parametros
    (11) Conjunto_Parametros -> Tipo . DOISPONTOS IDENTIFICADOR

    DOISPONTOS      shift and go to state 20


state 17

    (12) Conjunto_Parametros -> empty .

    FECHAPARENTES   reduce using rule 12 (Conjunto_Parametros -> empty .)


state 18

    (8) Variaveis -> Variaveis VIRGULA IDENTIFICADOR .

    VIRGULA         reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    INTEIRO         reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    FLUTUANTE       reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    $end            reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    FIM             reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    SE              reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    REPITA          reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    LEIA            reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    ESCREVA         reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    RETORNA         reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    ATE             reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)
    SENAO           reduce using rule 8 (Variaveis -> Variaveis VIRGULA IDENTIFICADOR .)


state 19

    (5) Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES . Conjunto_Declaracoes FIM
    (6) Funcao -> Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES . FIM
    (15) Conjunto_Declaracoes -> . Conjunto_Declaracoes Declaracao
    (16) Conjunto_Declaracoes -> . Declaracao
    (17) Declaracao -> . Declaracao_Se
    (18) Declaracao -> . Declaracao_Repita
    (19) Declaracao -> . Declaracao_Atribuicao
    (20) Declaracao -> . Declaracao_Leia
    (21) Declaracao -> . Declaracao_Escreva
    (22) Declaracao -> . Declaracao_Variavel
    (23) Declaracao -> . Declaracao_Retorno
    (24) Declaracao -> . Chama_Funcao
    (25) Declaracao_Se -> . SE Expressao_Comparacional ENTAO Conjunto_Declaracoes FIM
    (26) Declaracao_Se -> . SE Expressao_Comparacional ENTAO Conjunto_Declaracoes SENAO Conjunto_Declaracoes FIM
    (27) Declaracao_Repita -> . REPITA Conjunto_Declaracoes ATE Expressao_Comparacional
    (28) Declaracao_Atribuicao -> . IDENTIFICADOR ATRIBUICAO Conjunto_Expressao
    (29) Declaracao_Leia -> . LEIA ABREPARENTES IDENTIFICADOR FECHAPARENTES
    (30) Declaracao_Escreva -> . ESCREVA ABREPARENTES Conjunto_Expressao FECHAPARENTES
    (7) Declaracao_Variavel -> . Tipo DOISPONTOS Variaveis
    (31) Declaracao_Retorno -> . RETORNA ABREPARENTES Conjunto_Expressao FECHAPARENTES
    (41) Chama_Funcao -> . IDENTIFICADOR ABREPARENTES Parametros FECHAPARENTES
    (42) Chama_Funcao -> . IDENTIFICADOR ABREPARENTES FECHAPARENTES
    (13) Tipo -> . INTEIRO
    (14) Tipo -> . FLUTUANTE

    FIM             shift and go to state 33
    SE              shift and go to state 29
    REPITA          shift and go to state 34
    IDENTIFICADOR   shift and go to state 35
    LEIA            shift and go to state 28
    ESCREVA         shift and go to state 22
    RETORNA         shift and go to state 23
    INTEIRO         shift and go to state 7
    FLUTUANTE       shift and go to state 5

    Declaracao                     shift and go to state 21
    Declaracao_Se                  shift and go to state 37
    Declaracao_Repita              shift and go to state 30
    Declaracao_Variavel            shift and go to state 32
    Chama_Funcao                   shift and go to state 31
    Declaracao_Atribuicao          shift and go to state 24
    Tipo                           shift and go to state 25
    Declaracao_Leia                shift and go to state 26
    Declaracao_Retorno             shift and go to state 27
    Declaracao_Escreva             shift and go to state 36
    Conjunto_Declaracoes           shift and go to state 38

state 20

    (10) Conjunto_Parametros -> Tipo DOISPONTOS . IDENTIFICADOR VIRGULA Conjunto_Parametros
    (11) Conjunto_Parametros -> Tipo DOISPONTOS . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 39


state 21

    (16) Conjunto_Declaracoes -> Declaracao .

    ATE             reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    SE              reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    REPITA          reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    IDENTIFICADOR   reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    LEIA            reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    ESCREVA         reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    RETORNA         reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    INTEIRO         reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    FLUTUANTE       reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    FIM             reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)
    SENAO           reduce using rule 16 (Conjunto_Declaracoes -> Declaracao .)


state 22

    (30) Declaracao_Escreva -> ESCREVA . ABREPARENTES Conjunto_Expressao FECHAPARENTES

    ABREPARENTES    shift and go to state 40


state 23

    (31) Declaracao_Retorno -> RETORNA . ABREPARENTES Conjunto_Expressao FECHAPARENTES

    ABREPARENTES    shift and go to state 41


state 24

    (19) Declaracao -> Declaracao_Atribuicao .

    FIM             reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    SE              reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    REPITA          reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    IDENTIFICADOR   reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    LEIA            reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    ESCREVA         reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    RETORNA         reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    INTEIRO         reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    FLUTUANTE       reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    ATE             reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)
    SENAO           reduce using rule 19 (Declaracao -> Declaracao_Atribuicao .)


state 25

    (7) Declaracao_Variavel -> Tipo . DOISPONTOS Variaveis

    DOISPONTOS      shift and go to state 9


state 26

    (20) Declaracao -> Declaracao_Leia .

    FIM             reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    SE              reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    REPITA          reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    IDENTIFICADOR   reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    LEIA            reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    ESCREVA         reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    RETORNA         reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    INTEIRO         reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    FLUTUANTE       reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    ATE             reduce using rule 20 (Declaracao -> Declaracao_Leia .)
    SENAO           reduce using rule 20 (Declaracao -> Declaracao_Leia .)


state 27

    (23) Declaracao -> Declaracao_Retorno .

    FIM             reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    SE              reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    REPITA          reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    IDENTIFICADOR   reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    LEIA            reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    ESCREVA         reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    RETORNA         reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    INTEIRO         reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    FLUTUANTE       reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    ATE             reduce using rule 23 (Declaracao -> Declaracao_Retorno .)
    SENAO           reduce using rule 23 (Declaracao -> Declaracao_Retorno .)


state 28

    (29) Declaracao_Leia -> LEIA . ABREPARENTES IDENTIFICADOR FECHAPARENTES

    ABREPARENTES    shift and go to state 42


state 29
